# Hit-score-api

./: app.py  app_backup.py  app_optimized.py  app_simple.py  at_bat_verification.py  auth_config.py  auth_pages.py  daily_cache.py  daily_verification.py  data_backup.py  data_cache.py  data_fetcher.py  espn_splits_fetcher.py  fangraphs_scraper.py  hit_score_api.py  lineup_scraper.py  mlb_statscast_fetcher.py  odds_fetcher.py  player_verification.py  pyproject.toml  ranking_calculator.py  requirements.txt  simple_rankings.py  splits_scraper.py  sportsdata_fetcher.py  utils.py
.github/workflows/: main.yml
Workflows/: Daily_refresh
