[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "streamlit-authenticator>=0.4.2",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "bcrypt>=4.3.0",
    "pyjwt>=2.10.1",
    "paypalrestsdk>=1.13.3",
]
